<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TermsAndConditionsActivity">

    <TextView
        android:id="@+id/textViewUnase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="145dp"
        android:text="@string/tv_unase"
        android:textColor="#000000"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTermsAndConditions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:text="@string/tv_terms_and_conditions"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewUnase"
        app:layout_constraintTop_toBottomOf="@+id/textViewUnase" />

    <Button
        android:id="@+id/buttonAcept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:background="@color/colorButton"
        android:text="@string/btn_acept"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTermsAndConditions" />
</androidx.constraintlayout.widget.ConstraintLayout>