<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.WelcomeActivity" >

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="#A2845E"
        android:text="@string/btn_login"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignIn"
        app:layout_constraintEnd_toEndOf="@+id/buttonSignIn"
        app:layout_constraintStart_toStartOf="@+id/buttonSignIn" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="#ED3833"
        android:text="@string/btn_signin"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonGuest"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="?android:attr/panelBackground"
        android:text="@string/btn_guest"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/welcome_view"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test"
        tools:layout_editor_absoluteX="181dp"
        tools:layout_editor_absoluteY="94dp" />

    <Button
        android:id="@+id/btnfind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="find"
        android:translationY="200dp"
        android:translationX="50dp"/>

    <Button
        android:id="@+id/mostrarbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mostrar"
        android:translationY="200dp"
        android:translationX="150dp" />
</androidx.constraintlayout.widget.ConstraintLayout>